after first session with FindBugs
git-svn-id: http://svn.jemian.org/svn/regitte/CountdownJ@1456 4ca16b70-4e1b-0410-88e2-31485261bf7f